--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,23 +106,23 @@
         app:layout_constraintTop_toBottomOf="@+id/img_logo" />
 
 
-    <Button
-        android:id="@+id/btnload"
-        android:layout_width="348dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/btn_bg_load"
-        android:text="@string/load"
-        android:textColor="@color/login_form_details_medium"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/img_gradient"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnsign"
-        app:layout_constraintVertical_bias="0.0" />
+    <!--<Button-->
+        <!--android:id="@+id/btnload"-->
+        <!--android:layout_width="348dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:background="@drawable/btn_bg_load"-->
+        <!--android:text="@string/load"-->
+        <!--android:textColor="@color/login_form_details_medium"-->
+        <!--android:visibility="visible"-->
+        <!--app:layout_constraintBottom_toBottomOf="@+id/img_gradient"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/btnsign"-->
+        <!--app:layout_constraintVertical_bias="0.0" />-->
 
 
 </android.support.constraint.ConstraintLayout>
