--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="backgroungcolor">#fcfcfc</color>
     <color name="lightgray">#ededed</color>
     <color name="deepurple">#7c4dff</color>
+    <color name="blue">#2196F3</color>
     <color name="yellow">#ffb300</color>
     <color name="green">#00bfa5</color>
     <color name="pink">#ff4081</color>
