--- a/app/src/main/res/layout/activity_menu_app.xml
+++ b/app/src/main/res/layout/activity_menu_app.xml
@@ -11,12 +11,11 @@
     tools:context=".screen.MenuApp">
 
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="428dp"
         android:clipToPadding="false"
         android:gravity="center"
@@ -53,8 +52,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Collaborateurs"
-                    android:textSize="12dp"
+                    android:text="@string/collaborateurs"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
@@ -70,7 +69,7 @@
                     android:padding="5dp"
                     android:text="Check your team activities"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="10dp" />
+                    android:textSize="10sp" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -103,8 +102,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="A faire"
-                    android:textSize="12dp"
+                    android:text="Item 2"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
@@ -120,7 +119,7 @@
                     android:padding="5dp"
                     android:text="Check your team activities"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="10dp" />
+                    android:textSize="10sp" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -165,8 +164,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="A faire"
-                    android:textSize="12dp"
+                    android:text="Item 3"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
@@ -180,7 +179,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:textSize="10dp"
+                    android:textSize="10sp"
                     android:text="Check your team activities"
                     android:textColor="@android:color/darker_gray" />
 
@@ -215,8 +214,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="A faire"
-                    android:textSize="12dp"
+                    android:text="Item 4"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
@@ -230,7 +229,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:textSize="10dp"
+                    android:textSize="10sp"
                     android:text="Check your team activities"
                     android:textColor="@android:color/darker_gray" />
 
@@ -277,8 +276,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="A faire"
-                    android:textSize="12dp"
+                    android:text="Item 5"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
@@ -292,7 +291,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:textSize="10dp"
+                    android:textSize="10sp"
                     android:text="Check your team activities"
                     android:textColor="@android:color/darker_gray" />
 
