--- a/app/src/main/res/layout/activity_menu_app.xml
+++ b/app/src/main/res/layout/activity_menu_app.xml
@@ -10,7 +10,6 @@
     android:background="@color/backgroungcolor"
     tools:context=".screen.MenuApp">
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -26,6 +25,7 @@
 
         <!-- First item -->
         <android.support.v7.widget.CardView
+            android:id="@+id/collab"
             android:layout_width="120dp"
             android:layout_height="150dp"
             android:layout_margin="10dp"
@@ -77,6 +77,7 @@
 
         <!-- Second item -->
         <android.support.v7.widget.CardView
+            android:id="@+id/item2"
             android:layout_width="120dp"
             android:layout_height="150dp"
             android:layout_margin="10dp"
@@ -139,6 +140,7 @@
 
         <!-- third item -->
         <android.support.v7.widget.CardView
+            android:id="@+id/item3"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
@@ -189,6 +191,7 @@
 
         <!-- Four item -->
         <android.support.v7.widget.CardView
+            android:id="@+id/item4"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
@@ -251,6 +254,7 @@
 
         <!-- Five item -->
         <android.support.v7.widget.CardView
+            android:id="@+id/item5"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
