--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,20 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="24dp" />
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="26dp"
+        android:layout_height="13dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnsign"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/img_logo" />
+
     <!--<EditText-->
     <!--android:id="@+id/username"-->
     <!--android:layout_width="0dp"-->
