--- a/app/src/main/res/drawable/btn_bg_load.xml
+++ b/app/src/main/res/drawable/btn_bg_load.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--<gradient-->
+        <!--android:startColor="#D95574F7"-->
+        <!--android:endColor="#D960C3FF"-->
+        <!--android:angle="45"/>-->
+
     <gradient
-        android:startColor="#D95574F7"
-        android:endColor="#D960C3FF"
+        android:startColor="#02BDD2"
+        android:endColor="#C64d2878"
         android:angle="45"/>
 
 
